# esp32-ssr-timer-multiple-channel

./: CMakeLists.txt  README.md  partitions.csv  script.mk  sdkconfig  sdkconfig.old  simulator_update_firware.py  test.mk  timezone.json
.cache/clangd/index/: RF24.cpp.CE9362D216CC641D.idx  RF24.h.0B6CBADD124D0274.idx  RF24_config.h.EB4B38F78A51CDD1.idx  access_point.c.0EB183FBF5225427.idx  access_point.c.1B6BCA082272F765.idx  access_point.c.A8991F43E9F3A04A.idx  access_point.c.D2C0EAA82CD3CD75.idx  access_point.c.F5A19EADA0FB0E9B.idx  access_point.h.26E8D62E285BBAA8.idx  access_point.h.4BE8E44541207F73.idx  access_point.h.7F4596A065398379.idx  access_point.h.BD6254D7B331086B.idx  access_point.h.C391892654C7CD83.idx  adc.c.3CEE320EF3933232.idx  adc.c.669E7B0EC6EA190E.idx  adc.c.8E67117F6D257024.idx  adc.c.9CCC782144F47AF1.idx  app_ble.c.D6115D7F30AAF7F0.idx  app_ble.h.948EF8B3522C1B2F.idx  (+258 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/configuration/: device_config.h  pinout.h  status.h  system.h
main/models/: model_helper.c  model_helper.h  sensor_model.c  sensor_model.h  setpoint.c  setpoint.h  switch_model.c  switch_model.h  switch_timer_func.c  switch_timer_func.h
main/mqtt/: mqtt.c  mqtt.h  mqtt_callback.c  mqtt_callback.h  mqtt_measurement.c  mqtt_measurement.h
main/nrf24/: mirf.c  mirf.h  nrf24_init copy.c  nrf24_init.c  nrf24_init.h  slave_data.c  slave_data.h
main/peripheral/: adc.c  gpio.c  gpio.h  led.c  led.h
main/remote_ota/: ota.c  ota.h  ota_rollback_v2.c  ota_rollback_v2.h
main/system/: datetime.c  datetime.h  locks.c  locks.h  my_nvs.c  my_nvs.h  setting.c  setting.h  system_monitor.c  system_monitor.h  ticks.c  ticks.h
main/wifi/: access_point.c  access_point.h  app_wifi.c  app_wifi.h  tcp_server.c  tcp_server.h  test.c
spiffs/: index.html  script.js  styles.css
test/: sensor.json  switch_valve_test.json
